# apertium-en-hi

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  apertium-en-hi.en-hi.dix  apertium-en-hi.en-hi.dix~  apertium-en-hi.en-hi.t1x  apertium-en-hi.en-hi.t3x  apertium-en-hi.en.acx  apertium-en-hi.en.dix  apertium-en-hi.en.metadix  apertium-en-hi.hi-en.dix  apertium-en-hi.hi-en.lrx  apertium-en-hi.hi-en.lrx~  apertium-en-hi.hi-en.rlx  apertium-en-hi.hi-en.rlx~  apertium-en-hi.hi-en.t1x  apertium-en-hi.hi-en.t1x~  apertium-en-hi.hi-en.t2x  apertium-en-hi.hi-en.t2x~  apertium-en-hi.hi-en.t3x  apertium-en-hi.hi.dix  apertium-en-hi.hi.dix~  article_translation  atricle_translate  c  configure.ac  index.html  modes.xml  params.json  pending-tests.sh  testvoc.sh
dev/: ReadMe.txt  apertium-en-hi.en-hi.dix  apertium-en-hi.hi.dix  automate.py  check_dictionary.py  correct_monodix.py  cuento.hi.txt  dictionary_create.py  hindi_word.py  inconsistency.sh  intransitive-verb-list  make_dictionary.py  make_dictionary1.py  make_new_dictionary.py  postposition_ex  spelling-paradigms.py  thread.py  thread1.py  thread2.py  thread4.py  thread5.py  transitive-verb-list  verbforms  verbforms1  verbforms3
dev/testvoc/: inconsistency.sh  testvoc-summary.hin-eng.txt  testvoc.sh
modes/: en-hi-anmor.mode  en-hi-chunker.mode  en-hi-generador.mode  en-hi-interchunk.mode  en-hi-postchunk.mode  en-hi-pretransfer.mode  en-hi-tagger.mode  en-hi.mode  hi-en-biltrans.mode  hi-en-chunker.mode  hi-en-disam.mode  hi-en-interchunk.mode  hi-en-lextor.mode  hi-en-morph.mode  hi-en-postchunk.mode  hi-en-tagger.mode  hi-en.mode
